force-app/main/default/objects/SV_DeviceMask__c/SV_DeviceMask__c.object-meta.xml
<CustomObject>
    <label>SV Device-Mask</label>
    <nameField>
        <displayFormat>DM-{00000}</displayFormat>
        <label>SV DeviceMask Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SV Devices-Masks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>