force-app/main/default/objects/SV_DeviceMask__c/fields/Device_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Device_Product_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Device Product Code</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>SV_DeviceMasks</relationshipName>
    <type>Lookup</type>
</CustomField>