force-app/main/default/objects/SV_DeviceMask__c/fields/Extended_Warranty_Code__c.field-meta.xml
<CustomField>
    <fullName>Extended_Warranty_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Extended Warranty Code</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>SV_DeviceMasks1</relationshipName>
    <type>Lookup</type>
</CustomField>