force-app/main/default/objects/SV_DeviceMask__c/fields/Is_Web_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Web_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Web Enabled?</label>
    <type>Checkbox</type>
</CustomField>