force-app/main/default/objects/SV_DeviceMask__c/fields/Mask_Name__c.field-meta.xml
<CustomField>
    <fullName>Mask_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mask Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>