force-app/main/default/objects/SV_DeviceMask__c/fields/Mask_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Mask_Product_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mask Product Code</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>SV_DeviceMasks2</relationshipName>
    <type>Lookup</type>
</CustomField>