force-app/main/default/objects/SV_DeviceMask__c/fields/Mask_Size__c.field-meta.xml
<CustomField>
    <fullName>Mask_Size__c</fullName>
    <label>Mask Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>