force-app/main/default/objects/SV_DeviceMask__c/fields/Sort_Index__c.field-meta.xml
<CustomField>
    <fullName>Sort_Index__c</fullName>
    <description>This field will help control the order in which the select options will display on the UI.</description>
    <label>Sort Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>