force-app/main/default/objects/SV_DeviceMask__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Device_Name__c</columns>
    <columns>Device_Product_Code__c</columns>
    <columns>Extended_Warranty_Code__c</columns>
    <columns>Sort_Index__c</columns>
    <columns>Is_Web_Enabled__c</columns>
    <columns>Mask_Name__c</columns>
    <columns>Mask_Product_Code__c</columns>
    <columns>Mask_Size__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>